# RustWebDev

./: Cargo.toml
src/: config.toml  main.rs
src/api/: sys_menu.rs
src/config/: logger_config.rs  mod.rs  mysql_config.rs  system_config.rs
src/core/: db.rs
src/model/: mod.rs  sys_menu.rs
src/result/: mod.rs  res.rs
src/router/: admin.rs
