[package]
name = "blog_new"
version = "0.1.0"
edition = "2021"

[dependencies]
#actix
actix-web = "4"
once_cell = "1.19"
#toml解析
toml = "0.8.14"
serde = "1.0.203"
serde_derive = "1.0.136"
#日志
humantime = "2.1.0"
log = "0.4"
fern = "0.6"
#orm
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
] }
#tokio 异步运行库
tokio = { version = "1.38", features = ["full"] }
actix-rt = "2.10.0"
